# highload

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  fluentd.conf  logstash.conf  prometheus.yml  schema.sql
deck_service/: Dockerfile  fixtures.py  main.py  pyproject.toml
docs/: KIBANA.md  architecture.drawio
frontend/: profile.html
notification_service/: async_consumer.py  async_producer.py  main.py  pyproject.toml  sync_consumer.py  sync_producer.py
profile_service/: Dockerfile  main.py  pyproject.toml
swipe_service/: Dockerfile  main.py  pyproject.toml
