[tool.poetry]
name = "deck-service"
version = "0.1.0"
description = ""
authors = ["user <user@mail.com>"]
readme = "README.md"
packages = [{include = "deck_service"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
