[tool.poetry]
name = "profile-service"
version = "0.1.0"
description = ""
authors = ["user <user@mail.com>"]
readme = "README.md"
packages = [{include = "profile_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
