[tool.poetry]
name = "swipe-service"
version = "0.1.0"
description = ""
authors = ["user <user@mail.com>"]
readme = "README.md"
packages = [{include = "swipe_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.39"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
aiokafka = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
